@startuml

title __CUSTOMANALYSIS's Class Diagram__\n

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Analysis {
        package sud_tanj.com.icare.Backend.Analysis.CustomAnalysis {
          class AirQualityAnalysis {
              - ppm : double
              - getAnalysis()
              - getMessage()
              + run()
              + setPpm()
              + AirQualityAnalysis()
              + getPpm()
          }
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Analysis {
        package sud_tanj.com.icare.Backend.Analysis.CustomAnalysis {
          class DistanceAnalysis {
              - distance : Double
              # getAnalysisResult()
              # getDescription()
              + run()
              + setDistance()
              + DistanceAnalysis()
              + getDistance()
          }
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.Analysis {
        package sud_tanj.com.icare.Backend.Analysis.CustomAnalysis {
          class StepsAnalysis {
              - steps : double
              # getAnalysisResult()
              # getDescription()
              + run()
              + StepsAnalysis()
              + setSteps()
              + getSteps()
          }
        }
      }
    }
  }
  

  AirQualityAnalysis -up-|> BaseAnalysis
  DistanceAnalysis -up-|> BaseAnalysis
  StepsAnalysis -up-|> BaseAnalysis


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
